src/test/ui/type-alias-impl-trait/issue-74280.stderr
error[E0308]: mismatched types
  --> $DIR/issue-74280.rs:10:5
   |
LL |     let y = || -> Test { () };
   |                          -- type expected due to this
LL |     7
   |     ^ expected `()`, found integer

error: could not find defining uses
  --> $DIR/issue-74280.rs:5:13
   |
LL | type Test = impl Copy;
   |             ^^^^^^^^^

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0308`.
